hyperontology/ing-redirect-hyperontology.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ontology-redirect
  annotations:
    nginx.ingress.kubernetes.io/permanent-redirect: https://hyperontology.eucaim.cancerimage.eu/
    nginx.ingress.kubernetes.io/permanent-redirect-code: "301"
spec:
  ingressClassName: nginx
  rules:
    - host: cancerimage.eu
      http:
        paths:
          - path: /ontology/EUCAIM
            pathType: Prefix
            backend:
              service:
                name: dummy-service
                port:
                  number: 80
